welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:8: error: type mismatch;
 found   : Unit
 required: Int
    x=19
     ^teenSum:7: error: type mismatch;
 found   : Unit
 required: Int
  if (b>=13 && b<=19){
  ^